Cloning and deleting VMs
- Added buttons to clone and delete the VM when the status permit it.

- New Status: "Not created"

- New loading GIF (Work In Progress)

- Generalized Start and Stop VM functions to work with all the VMs.

--- a/playbooks/startVM.yml
+++ b/playbooks/startVM.yml
@@ -6,8 +6,6 @@
         api_user    : root@pam
         api_password: pass
         api_host    : 192.168.1.10
-        name        : w10-simple-clone-osc3b
+        name        : "{{ vmname }}"
         node        : proxmox
-        state       : current
-      register    : result
-    - debug: msg="{{ result.status }}"
+        state       : started
