New interactive panel and a lot of fixes and improvements
- Most of the stats shows in the panel are now interactive with the creation, execution and removal of the machines.

- Loading GIF that is showed when Ansible is checking the status of the machine or making some action

- Javascript code reworked and separated in different files

- New conditionals for changing the state of a machine, checking the errors that can occur

- Now the page works with multiple users working at the same time with the machines, the only problem is the creation part, but if this occurs, a explicative error is showed

--- a/playbooks/startVM.yml
+++ b/playbooks/startVM.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: 192.168.1.10
+  serial: 1
   remote_user: root
   tasks:
     - proxmox_kvm:
@@ -9,3 +10,4 @@
         name        : "{{ vmname }}"
         node        : proxmox
         state       : started
+      throttle: 1
