--- a/playbooks/statusVM.yml
+++ b/playbooks/statusVM.yml
@@ -1,13 +1,15 @@
 ---
 - hosts: 192.168.1.10
+  serial: 1
   remote_user: root
   tasks:
     - proxmox_kvm:
         api_user    : root@pam
         api_password: pass
         api_host    : 192.168.1.10
-        name        : w10-simple-clone-osc3b
+        name        : "{{ vmname }}"
         node        : proxmox
         state       : current
       register    : result
+      throttle: 1
     - debug: msg="{{ result.status }}"
